--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
     </div>
 
     <div class="footer">
-      <a href="credits.html">Credits</a>
+      <a href="Credits.HTML">Credits</a>
     </div>
   </div>
 </body>
 </html>
+
+
